--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Manuela, Nicolas e Tiago",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3"
   }
 }
