--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compass-api",
+  "name": "compass",
   "version": "1.0.0",
   "description": "Desafio 2 - Compass.UOL",
   "main": "./scr/app.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/manudsf/compass_API.git"
+    "url": "git+https://github.com/manudsf/compass_API.git"
   },
   "author": "Manuela, Nicolas e Tiago",
   "license": "ISC",
@@ -20,10 +20,12 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
-  }
+  },
+  "keywords": [
+    "root"
+  ]
 }
